# ssh-cli

./: .cargoignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  release.yml
benches/: ssh_operations.rs
src/: cli.rs  erros.rs  i18n.rs  lib.rs  locale.rs  main.rs  mascaramento.rs  output.rs  paths.rs  scp.rs  signals.rs  terminal.rs  tunnel.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/ssh/: cliente.rs  mod.rs
src/vps/: mod.rs  modelo.rs
tests/: e2e_cli.rs  i18n_integration.rs  proptest_tests.rs  scp_integration.rs  snapshot_tests.rs  storage_integration.rs  tunnel_integration.rs
tests/snapshots/: snapshot_tests__completions_bash_header.snap  snapshot_tests__error_vps_not_found.snap  snapshot_tests__help_output.snap  snapshot_tests__version_format.snap  snapshot_tests__vps_list_empty.snap  snapshot_tests__vps_path_format.snap
